--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"test": "mocha"
 	},
 	"author": "Connor McFarlane <connormcfarlane10> (https://connormcf.com)",
-	"license": "ISC",
+	"license": "WTFPL",
 	"devDependencies": {
 		"mocha": "^3.2.0"
 	}
